# opendlp

./: .dockerignore  .gitguardian.yaml  .gitignore  .grype.yaml  .pre-commit-config-ci.yaml  .pre-commit-config.yaml  .secrets.baseline  .talismanrc  CLAUDE.md  LICENSE.txt  README.md  docker-entrypoint.sh  justfile  pyproject.toml  typos.toml
backend/: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  babel.cfg  compose.localdev.yaml  compose.production-nodb.yaml  compose.production.yaml  compose.test.yaml  compose.yaml  docker-compose.localdev.yml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  env.example  justfile  package-lock.json  package.json  pyproject.toml  sample_participants.csv  tailwind.config.js  wsgi.py
backend/docs/: 412-apply-design-to-dashboard-assembly.md  analytics.md  architecture.md  background_tasks.md  backoffice-test-coverage.md  backoffice_design_system.md  backoffice_frontend_architecture_research.md  bot-protection.md  cli.md  configuration.md  csv-upload-and-gsheet-flow-redesign-spec.md  deploy.md  docker.md  frontend_build.md  frontend_security.md  google_oauth_setup.md  google_service_account.md  gsheet-manual-test-plan.md  microsoft_oauth_setup.md  module_and_specification_system_design.md  monitoring.md  personal-data.md  postfix_configuration.md  prompt_plan.md  respondent_export.md  selection-tab-spec.md  sortition_error_translations.md  spec.md  system-architecture.md  testing.md  translations.md
backend/docs/agent/: 364-selection-report-csv-plan.md  446-edit-respondents-plan.md  453-csv-upload.md  657-floating-alerts-scroll-preservation.md  ABOUT.md  backoffice-select-htmx.md  code_quality_rules.md  component_accessibility.md  csv-upload-gds-plan.md  csv_upload_feature.md  delete-respondents-plan.md  detailed-target-feedback-research.md  faster-tests-research.md  frontend_design_system.md  frontend_testing.md  govuk-frontend-upgrade-plan.md  govuk_components.md  gsheet-manual-test-plan.md  migration_notes.md  module_design.md  prompt_plan.md  replacement-selection-modal-spec.md  sass-1.100.0-upgrade-analysis.md  scroll-preservation-spec.md  selection-progress-research.md  selection-settings-plan.md  selection-tab-spec.md
backend/docs/explainers/: fields-and-targets.html  workflow-reg-page.html
backend/features/: accessibility.feature  admin-users.feature  backoffice-assembly-gsheet.feature  backoffice-assembly-members.feature  backoffice-assembly.feature  backoffice-csv-upload.feature  backoffice-registration-editor.feature  backoffice.feature  create-assembly.feature  email_confirmation.feature  export-respondents.feature  login.feature  replacement-selection.feature  respondent-field-schema.feature  scroll-preservation.feature  selection-history.feature  selection.feature  update-assembly.feature  user-data-agreement.feature  view-assembly-list.feature  view-assembly.feature
backend/migrations/: env.py
backend/migrations/versions/: 0dd36337f48e_add_progress_column_to_selection_run_.py  1aea6aa317b3_update_enum_columns_to_use_custom_type.py  1d7768eabf9a_add_assembly_gsheets_table.py  23993534552f_add_already_selected_tab_to_assembly_.py  256ac0172c14_add_selection_run_record_table.py  28ad0135cfe8_registration_pages_rename_draft_to_test_.py  2a4a39b93c61_initial_migration_create_all_tables.py  3027292d7d21_fix_selection_settings_id_column_for_.py  31c94e088009_merge_password_reset_migration_head.py  357851019236_assemblies_first_assembly_date_nullable.py  36f822f76b45_remove_username_column_and_add_first_.py  38ce30978f41_add_selection_run_record_table.py  38e2fb249cdd_add_respondent_field_definitions.py  3b1a6d409159_tz_aware_indexes.py  57d73add6894_add_spreadsheet_title_and_worksheet_url_.py  5e06447b7861_add_email_templates_send_records_and_.py  6157c89afb01_registration_pages_status_enum_and_.py  62e37f3ab7e8_add_registration_documents.py  65bda39a_extend_selection_run_record.py  6c832644862b_add_registration_pages.py  92511de414a4_make_number_to_select_non_nullable_with_.py  974f13035459_add_on_registration_page_to_respondent_.py  97bd06e3418a_add_assembly_respondent_gsheets_table.py  9a412ec321c2_remove_gsheet_url_from_assembly.py  9b7ce3e7684e_add_assembly_csv_table_for_csv_.py  a1b2c3d4e5f6_add_password_reset_tokens_table.py  a644849bb5d2_add_registration_images.py  ae1e11ac18e2_add_settings_confirmed_to_assembly_csv.py  af1f1d62035b_add_comments_to_respondents.py  b1c2d3e4f5a6_add_email_to_user_invites.py  b7c2f1a4d8e3_add_original_filename_to_registration_images.py  bc31250a8ad0_add_field_type_and_options_to_.py  c3d4e5f6a7b8_extract_selection_settings.py  c7e1a9f4b206_add_email_templates_table.py  d0da5f725d79_add_columns_and_tables_for_totp_2fa.py  d252dc8f3a62_rename_assembly_field_gsheet_to_gsheet_.py  d87ee6f88367_add_user_data_agreement_agreed_at_.py  dbb4dc5c616b_add_target_categories_and_respondents_.py  dc970a98750c_drop_source_reference_from_respondents.py  e2da2a1682d2_add_number_to_select_field_to_assemblies.py  (+4 more)
backend/src/opendlp/: bootstrap.py  config.py  feature_flags.py  log_redaction.py  logging.py  translations.py
backend/src/scss/: _sortition.scss  _utilities.scss  application.scss
backend/static/css/: application.css  application.css.map
backend/static/js/: alpine-components.js  alpine-scroll-manager.js  htmx-422-swap.js  url-utils.js  utilities.js
backend/static/well-known/: robots.txt  security.txt
backend/templates/: base.html  base_public.html
backend/templates/admin/: index.html  invite_create.html  invite_view.html  invites.html  user_2fa_audit_log.html  user_edit.html  user_view.html  users.html
backend/templates/auth/: confirm_email.html  forgot_password.html  login.html  register.html  register_google.html  register_microsoft.html  resend_confirmation.html  reset_password.html  user_data_agreement.html  verify_2fa.html
backend/templates/backoffice/: assembly_data.html  assembly_details.html  assembly_edit_respondent.html  assembly_form.html  assembly_members.html  base.html  (+15 more)
backend/tests/: conftest.py  data.py  fakes.py
(+669 files in other folders)
