[project]
name = "OpenDLP"
version = "0.1.0"
description = "Open Democratic Lottery Platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.16.4",
  "authlib>=1.6.6",
  "cachelib>=0.13.0",
  "celery>=5.5.3",
  "click>=8.2.1",
  "cryptography>=46.0.0",
  "django>=5.2.5",
  "flask>=3.1.1",
  "flask-babel>=4.0.0",
  "flask-login>=0.6.3",
  "flask-session>=0.8.0",
  "flask-talisman>=1.1.0",
  "flask-wtf>=1.2.2",
  "gspread>=6.2.1",
  "markdown>=3.8.2",
  "markupsafe>=3.0.2",
  "pyotp>=2.9.0",
  "python-dotenv>=1.1.1",
  "qrcode[pil]>=8.2",
  "redis>=6.4.0",
  "sortition-algorithms==0.11.5",
  "sqlalchemy[postgresql-psycopg2binary]>=2.0.43",
  "structlog>=25.4.0",
  "tabulate>=0.9.0",
  "werkzeug>=3.1.3",
  "whitenoise>=6.9.0",
  "wtforms>=3.2.1",
]

[project.scripts]
opendlp = "opendlp.entrypoints.cli:cli"

[project.optional-dependencies]
production = ["gunicorn>=23.0.0"]

[build-system]
requires = ["uv_build>=0.8.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "celery-types>=0.23.0",
  "covdefaults>=2.3.0",
  "deptry>=0.23.1",
  "mypy>=1.17.1",
  "playwright>=1.54.0",
  "pytest>=8.4.1",
  "pytest-bdd>=8.1.0",
  "pytest-cov>=6.2.1",
  "pytest-playwright>=0.7.0",
  "pytest-subprocess>=1.5.3",
  "tenacity>=9.1.2",
  "time-machine>=2.19.0",
  "types-authlib>=1.6.6.20251220",
  "types-gunicorn>=23.0.0.20251001",
  "types-markdown>=3.8.0.20250809",
  "types-qrcode>=8.2.0.20250914",
  "types-wtforms>=3.2.1.20250809",
]

[tool.uv]
# this provides a "cooldown" to avoid supply chain issues - requires uv>=0.9.17
# background: https://blog.yossarian.net/2025/11/21/We-should-all-be-using-dependency-cooldowns
exclude-newer = "1 week"

[tool.uv.exclude-newer-package]
# we control this package, and frequently release it and want it straight in opendlp
sortition-algorithms = "0 days"
# for security update 8.10.2, released 2026-01-26 - so can remove after 2026-02-02
setuptools = "0 days"

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = false
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = 'pytest.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'celery.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'django.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'flask_babel.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'flask_login.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'flask_session.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'flask_talisman.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'flask_wtf.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'whitenoise.*'
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
  # flake8-2020
  "YTT",
  # flake8-bandit
  "S",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # flake8-debugger
  "T10",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pygrep-hooks
  "PGH",
  # pyupgrade
  "UP",
  # ruff
  "RUF",
  # tryceratops
  # TODO: re-enable later
  # "TRY",
]
ignore = [
  # UnnecessaryCollectionCall - but using dict(a=x, b=y) can be nicer
  "C408",
  # LineTooLong
  "E501",
  # use assert in non-test code
  "S101",
  # partial path in subprocess - "uv" rather than "/usr/bin/uv"
  "S607",
  # DoNotAssignLambda
  "E731",
  # ambiguous unicode chars
  "RUF001",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*.py" = [
  # at least these should be fine in tests:
  "S105", # hardcoded passwords
  "S106", # hardcoded passwords
  "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
  "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
  # The below are debateable
  "PLR2004", # Magic value used in comparison, ...
  "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
]
"**/tests/*" = [
  # at least these should be fine in tests:
  "S105", # hardcoded passwords
  "S106", # hardcoded passwords
  "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
  "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
  # The below are debateable
  "PLR2004", # Magic value used in comparison, ...
  "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["opendlp", "src", "tests"]

[tool.ruff.format]
preview = true

[tool.coverage.run]
source = ["src", "tests"]
plugins = ["covdefaults"]
omit = ["tests/bdd/*"]

[tool.coverage.report]
skip_empty = true
fail_under = 90

[tool.deptry.per_rule_ignores]
# these are not imported directly, but are used.
# - alembic - sqlalchemy migration - might be used directly in cli when we write it
# - gunicorn - web server for production
# pending usage - delete the other exceptions once 2FA is fully working
DEP002 = ["alembic", "gunicorn"]

[tool.djlint]
profile = "jinja"

[tool.typos.files]
extend-exclude = [
  # this is somewhere I dump stuff for LLM to read
  "thirdparty",
]

[tool.typos.default]
locale = "en"
# if we want to switch to this, we have to change quite a lot!
# locale = "en-gb"

[tool.typos.default.extend-words]
# used for 'strat select' - short for stratification
strat = "strat"
# this is the one Hungarian word found in user_data_agreement.py
Parlament = "Parlament"
# a french word in the tests of translations
algorithme = "algorithme"
# HashiCorp is leading to errors about Hashi -> Hash
Hashi = "Hashi"
# British English additions, for now at least
superceded = "superceded"
supercedes = "supercedes"
